Added a bit more text to our home page.

--- a/voyager/core/templates/index.html
+++ b/voyager/core/templates/index.html
@@ -1,3 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Claros Voyager{% endblock %}
+{% block title %}Home{% endblock %}
+
+{% block body %}
+  <section>
+    <h1>Claros Voyager</h1>
+
+    <p>The Claros Voyager provides a RESTful interface for the data of the
+       <a href="http://clarosnet.org/">Claros Project</a>, and complements the
+       Claros Explorer.</p>
+  </section>
+{% endblock %}
