Lots of new stuff…

--- a/voyager/core/templates/base.html
+++ b/voyager/core/templates/base.html
@@ -25,7 +25,7 @@
       <ul>
 {% block nav %}
         <li><a href="{% url index %}">home</a></li>
-{#        <li><a href="{% url datasets %}">datasets</a></li> #}
+        <li><a href="{% url claros-objects %}">objects</a></li>
 {#        <li><a href="{% url explore %}">explore</a></li> #}
         <li><a href="{% url sparql %}">sparql</a></li>
 {#        <li><a href="{% url help %}">help</a></li> #}
