Updated claros objects and people templates to match CLAROS CSS.

--- a/voyager/core/templates/claros/objects.html
+++ b/voyager/core/templates/claros/objects.html
@@ -24,7 +24,7 @@
 {% block title %}Objects{% endblock %}
 
 {% block body %}
-<section>
+<div id="content">
   <h1>Man-made objects</h2>
   
   <ul id="objects">
@@ -35,5 +35,5 @@
   {% endfor %}
   </ul>
   <div style="clear:both;"> </div>
-</section>
+</div>
 {% endblock %}
