--- a/voyager/core/templates/claros/people.html
+++ b/voyager/core/templates/claros/people.html
@@ -3,7 +3,7 @@
 {% block title %}People{% endblock %}
 
 {% block body %}
-<section>
+<div id="content">
   <h1>People</h1>
   
   <table class="description">
@@ -34,4 +34,5 @@
 {% endfor %}
     </tbody>
   </table>
+</div>
 {% endblock %}
