Updated index template to match CLAROS CSS.

--- a/voyager/core/templates/index.html
+++ b/voyager/core/templates/index.html
@@ -3,11 +3,11 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-  <section>
+  <div id="content">
     <h1>Claros Voyager</h1>
 
     <p>The Claros Voyager provides a RESTful interface for the data of the
        <a href="http://clarosnet.org/">Claros Project</a>, and complements the
        Claros Explorer.</p>
-  </section>
+  </div>
 {% endblock %}
