Added data banner.

--- a/voyager/templates/base.html
+++ b/voyager/templates/base.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="{{ EXPLORER_STYLE }}full.css" media="screen and (min-device-width: 320px)"/>
     {% endwith %}
 
+    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}base.css"/>
+
     <!--<link rel="stylesheet" href="{{ MEDIA_URL }}main.css" type="text/css"/>-->
     <link rel="icon" href="{{ MEDIA_URL }}favicon.ico" type="image/x-icon"/>{% if no_index %}
     <meta name="robots" content="noindex"/>{% endif %}
