--- a/voyager/templates/doc/base.html
+++ b/voyager/templates/doc/base.html
@@ -4,7 +4,12 @@
 
 {% block body %}
 <div id="content">
-  <h1>{{ subject.label }}</h1>
+  <h1>
+    {{ subject.label }}
+    <a title="View at partner's website" style="text-decoration: none; position: relative; top: 2px;" href="{{ subject.uri }}">
+      <img style="border: 0pt none;" alt="" src="/site-media/follow.png">
+    </a>
+  </h1>
   
   {% block description %}
     {% if subject.is_image %}
@@ -13,22 +18,71 @@
   {% endblock %}
   
   {% if subject.depictions %}
-    <h2>Images</h2>
-    <ul>
-    {% for depiction in subject.depictions %}
-      <li>
-        <a href="{{ depiction.doc_url }}">
-          <img src="{% url resized-image %}?url={{ depiction.uri }}&width=200" width="200"/>
-        </a>
+
+    
+  <ul class="object-images">
+  {% for depiction in subject.depictions %}
+    <li{% if forloop.counter0|divisibleby:5 and forloop.counter0 %} class="image-break"{% endif %}>
+      <a href="{{ depiction.doc_url }}">
+        <img src="{% url resized-image %}?url={{ depiction|urlencode }}&amp;width=180"/>
+      </a>
       </li>
-    {% endfor %}
+  {% endfor %}
   </ul>
+  <div style="clear:both;"> </div>
   {% endif %}
+  
+  <div class="sidebar">
+    {% if subject.geo_lat and subject.geo_long %}
+    <div style="width:180px; height:180px" id="subject-map"/></div>
+    <script type="application/javascript">
+      $(function() { voyager_simple_map("subject-map", {{ subject.geo_long }}, {{ subject.geo_lat }}); });
+    </script>
+{% endif %}
+
+      {% for thing in subject.things_of_type %}
+        {% if forloop.first %}
+          <section class="page-metadata">
+            <h2>Example instances</h2>
+            <ul style="list-style:none; padding-left:0">
+        {% endif %}
+              <li style="font-size:10pt; margin:3px 0;">{{ thing|node }}</li>
+        {% if forloop.last %}
+            </ul>
+          </section>
+        {% endif %}
+      {% endfor %}
+  
+    <h2>Other formats</h2>
+        
+    <ul>
+{% for format, url in formats %}
+      <li>
+        <a href="{{ url }}">{{ format.name }}</a>
+      </li>
+{% endfor %}
+    </ul>
+    
+              {% if subject.rdf_type %}
+<p>
+              Other things of type:
+              {% for type in subject.all.rdf_type %}  
+                <a href="{% url sparql %}?query={{ "SELECT ?subject WHERE {  ?subject a <"|urlencode }}{{ type.uri|urlencode }}{{ "> } LIMIT 200"|urlencode }}">
+                  {{ type.label }}</a>{% if not forloop.last %}, {% endif %}
+              {% endfor %}
+            </p>
+          {% endif %}
+    
+    <p>
+    <a href="{{ subject.uri }}">
+      View more detail at partner's website
+    </a></p>
+  </div>  
   
   <table class="description">
     <tbody>
   {% for property, objects in subject.properties %}
-      <tr>
+      <tr class="row-{% cycle odd,even %}">
         <th>{{ property|node }}</th>
         <td>
     {% for object in objects %}
@@ -41,5 +95,6 @@
     </tbody>
   </table>
 
+  <div style="clear:both; margin-top:20px">&nbsp;</div>
 </div>
 {% endblock %}
