--- a/voyager/templates/sparql.html
+++ b/voyager/templates/sparql.html
@@ -3,7 +3,7 @@
 {% block title %}SPARQL{% endblock %}
 
 {% block body %}
-  <dev id="content">
+  <div id="content">
     <h1>SPARQL</h1>
     
     {% if results.fields or result or subjects %}
@@ -11,7 +11,7 @@
     {% endif %}
     
     {% if results.fields %}
-      <table class="sparql-results">
+      <table class="description">
         <thead>
           <tr>
 {% for field in results.fields %}
@@ -64,5 +64,5 @@
       </table>
     </form>
   
-  </section>
+  </div>
 {% endblock %}
