--- a/voyager/media/base.css
+++ b/voyager/media/base.css
@@ -4,7 +4,6 @@ div#header {
 
 table.description {
 	background-color:#fff;
-	margin-left:10px;
     margin-top:20px;
 	border-collapse: collapse;
 	border:2px solid fff;
@@ -34,6 +33,7 @@ table.description tr.row-even th, table.description tr.row-even td {
       width:180px;
       margin-left:20px;
       margin-top:20px;
+      margin-bottom:20px;
       position:relative;
       padding-bottom: 0;
       font-size: 10pt;
@@ -86,6 +86,10 @@ div.sidebar {
     color: #2E3C48;
 }
 
+div.sidebar *:first-child {
+	margin-top:0;
+}
+
 div.sidebar h3, div.sidebar a {
 margin-top:2px;
 color: #2E3C48;
@@ -93,3 +97,31 @@ color: #2E3C48;
 
 .text-content {
 	margin:2em;
+}
+
+.text-content h2 {
+	padding-left:0;
+}
+
+div#query {
+    background-color: #CBDBE6;
+    border-bottom: 2px solid #6E89A0;
+    border-top: 2px solid #6E89A0;
+    clear: both;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    width:1000px;
+    margin-left:auto;
+    margin-right:auto;
+    position:relative;
+}
+
+div#query-fade {
+	background: url('blue-fade.png');
+	width:1000px;
+	height:50px;
+	position:absolute;
+	left:0;
+	bottom:0;
+
+}
