--- a/voyager/templates/base.html
+++ b/voyager/templates/base.html
@@ -46,6 +46,19 @@
 {% block body %}
         <h1>Home</h1>
 {% endblock %}
+
+
+      </div>
+
+{% if query %}
+      <div id="query">
+        <div class="text-content" style="padding-top:0">
+          <h2>Query used to generate this page</h2>
+          <pre>{{ query }}</pre>
+        </div>
+      </div>
+{% endif %}
+
     </div>
     <div id="footer">
       <p>
