Pull openlayers from data.clarosnet, as the hosted version is slow…

--- a/voyager/templates/base.html
+++ b/voyager/templates/base.html
@@ -18,7 +18,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script type="application/javascript" src="http://openlayers.org/api/OpenLayers.js"></script>
+    <script type="application/javascript" src="http://data.clarosnet.org/openlayers-media/OpenLayers.js"></script>
     <script type="application/javascript" src="{{ MEDIA_URL }}base.js"></script>
     {% block extrahead %}{% endblock %}
   </head>
