Added better formatting for SPARQL form.

--- a/voyager/media/base.css
+++ b/voyager/media/base.css
@@ -125,3 +125,25 @@ div#query-fade {
 	bottom:0;
 
 }
+
+form table {
+    width: 100%;
+}
+
+form th, form td {
+    border-top: 1px solid #ddd;
+}
+
+form tr:first-child th, form tr:first-child td {
+    border:0
+}
+
+form table th {
+    width: 200px;
+    vertical-align:top;
+    text-align:left;
+}
+
+form table textarea {
+    width: 100%;
+}
