A bit more style.

--- a/voyager/templates/doc/base.html
+++ b/voyager/templates/doc/base.html
@@ -85,7 +85,7 @@
     </a></p>
   </div>  
 
-  <table class="description">
+  <table class="description" style="margin-left:10px">
     <tbody>
   {% for property, objects in subject.properties %}
       <tr class="row-{% cycle odd,even %}">
