--- a/voyager/templates/sparql.html
+++ b/voyager/templates/sparql.html
@@ -40,7 +40,7 @@
     {% endif %}
     
     {% if graph %}
-    <pre>{{ graph.serialize }}</pre>
+    <pre style="overflow:scroll; max-height:400px">{{ graph.serialize }}</pre>
     {% endif %}
     
     {% if error %}
