Fix links and tweaking blurb text.

--- a/voyager/templates/base.html
+++ b/voyager/templates/base.html
@@ -26,8 +26,8 @@
   <body class="index">
     <div id="all">
       <div id="header">
-        <a id="logoLink" href="/">
-          <span id="site-title">data.clarosnet.org: The data of the CLAROS Project on the semantic web</span>
+        <a id="logoLink" href="http://www.clarosnet.org/">
+          <span id="site-title">www.clarosnet.org: The world of art on the semantic web</span>
         </a>
       <div class="mainnav">
         <ul>
