--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -8,10 +8,10 @@
     <div class="text-content">
 
     <p>The CLAROS Data service provides a RESTful interface for the data of the
-       <a href="http://clarosnet.org/">CLAROS Project</a>, and complements the
+       <a href="http://www.clarosnet.org/">CLAROS Project</a>, and complements the
        CLAROS Explorer.</p>
 
-    <p>This service provides metadata about classical art objects in
+    <p>This service provides metadata about archaeology and art in
        machine-readable formats such as RDF, JSON and KML.</p>
 
     <p>The data for the CLAROS project are modelled using the
