--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -21,7 +21,7 @@
        namespace.</p>
 
     <p>You can use the <a href="{% url claros-objects %}">Objects</a> and
-       <a href="{% url claros-objects %}">People</a> views to start exploring,
+       <a href="{% url claros-people %}">People</a> views to start exploring,
        or try your hand at <a href="{% url sparql %}">a SPARQL query</a>.</p>
 
     </div>
