--- a/voyager/media/base.css
+++ b/voyager/media/base.css
@@ -161,3 +161,46 @@ div.olControlAttribution {
     position: absolute;
     right: 0;
 }
+
+
+div.blog-feed {
+    float:right;
+    margin:0 0 2em 2em;
+    border:2px solid #6e89a0;
+    padding:1em;
+    width:260px;
+    background-color:#fff
+}
+
+div.blog-feed h2 {
+    margin:0 auto auto 0;
+    padding:0;
+    font-size:12pt;
+}
+
+div.blog-entry h3 {
+    font-size:11pt;
+    text-transform: none;
+    font-weight:bold;
+    margin-bottom:0;
+}
+
+div.blog-entry {
+    font-size:10pt;
+}
+
+div.blog-entry p {
+    margin:0.3em 0 0.3em 0;
+}
+
+p.blog-entry-date {
+    font-size:9pt;
+    font-style: italic;
+}
+
+p.blog-entry-more {
+    font-size:9pt;
+    text-align:right;
+    font-style: italic;
+    
+}
