--- a/voyager/templates/base.html
+++ b/voyager/templates/base.html
@@ -11,10 +11,10 @@
     {% endwith %}
 
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}base.css"/>
+    <link rel="icon" type="image/x-icon" href="{{ MEDIA_URL }}favicon.ico">
 
     <!--<link rel="stylesheet" href="{{ MEDIA_URL }}main.css" type="text/css"/>-->
-    <link rel="icon" href="{{ MEDIA_URL }}favicon.ico" type="image/x-icon"/>{% if no_index %}
-    <meta name="robots" content="noindex"/>{% endif %}
+    {% if no_index %}<meta name="robots" content="noindex"/>{% endif %}
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
