Corrected language used to describe the Erlangen ontology.

--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -37,7 +37,7 @@
        machine-readable formats such as RDF, JSON and KML.</p>
 
     <p>The data for the CLAROS project are modelled using the
-       <a href="http://erlangen-crm.org/">Erlangen RDF representation</a> of
+       <a href="http://erlangen-crm.org/">Erlangen OWL-DL 1.0 implementation</a> of
        the <a href="http://www.cidoc-crm.org/">CIDOC Conceptual Reference
        Model</a> using the <code>http://purl.org/NET/crm-owl#</code>
        namespace.</p>
