--- a/voyager/templates/base.html
+++ b/voyager/templates/base.html
@@ -50,11 +50,13 @@
 
       </div>
 
-{% if query %}
+{% if queries %}
       <div id="query">
         <div class="text-content" style="padding-top:0">
-          <h2>Query used to generate this page</h2>
-          <pre>{{ query }}</pre>
+          <h2>Quer{{ queries|pluralize:"y,ies" }} used to generate this page</h2>
+          {% for query in queries %}
+            <pre>{{ query }}</pre>
+          {% endfor %}
         </div>
       </div>
 {% endif %}
