--- a/voyager/templates/doc/base.html
+++ b/voyager/templates/doc/base.html
@@ -58,9 +58,9 @@
     <h2>Other formats</h2>
         
     <ul>
-{% for format, url in formats %}
+{% for format in formats %}
       <li>
-        <a href="{{ url }}">{{ format.name }}</a>
+        <a href="{{ format.url }}">{{ format.name }}</a>
       </li>
 {% endfor %}
     </ul>
