--- a/voyager/templates/doc/base.html
+++ b/voyager/templates/doc/base.html
@@ -69,13 +69,13 @@
 <p>
               Other things of type:
               {% for type in subject.all.rdf_type %}  
-                <a href="{% url sparql %}?query={{ "SELECT ?subject WHERE {  ?subject a <"|urlencode }}{{ type.uri|urlencode }}{{ "> } LIMIT 200"|urlencode }}">
+                <a href="{% url sparql:endpoint %}?query={{ "SELECT ?subject WHERE {  ?subject a <"|urlencode }}{{ type.uri|urlencode }}{{ "> } LIMIT 200"|urlencode }}">
                   {{ type.label }}</a>{% if not forloop.last %}, {% endif %}
               {% endfor %}
             </p>
           {% endif %}
 
-          <p>            <a href="{% url sparql %}?query={{ "SELECT ?subject ?predicate WHERE {  ?subject ?predicate <"|urlencode }}{{ subject.uri|urlencode }}{{ "> } LIMIT 200"|urlencode }}">
+          <p>            <a href="{% url sparql:endpoint %}?query={{ "SELECT ?subject ?predicate WHERE {  ?subject ?predicate <"|urlencode }}{{ subject.uri|urlencode }}{{ "> } LIMIT 200"|urlencode }}">
               What links here
             </a></p>
 
