Moved templates to use reusable block names.

--- a/voyager/templates/404-empty.html
+++ b/voyager/templates/404-empty.html
@@ -2,7 +2,7 @@
 
 {% block title %}Not Found{% endblock %}
 
-{% block body %}
+{% block content %}
   <h1>Not Found</h1>
     
   <div class="text-content">
