--- a/voyager/templates/500.html
+++ b/voyager/templates/500.html
@@ -2,7 +2,7 @@
 
 {% block title %}Internal Server Error{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Internal Server Error</h1>
     
     <div class="text-content">
