--- a/voyager/templates/claros/objects-index.html
+++ b/voyager/templates/claros/objects-index.html
@@ -2,7 +2,7 @@
 
 {% block title %}Objects{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Objects</h1>
 
     <div class="text-content">
