--- a/voyager/templates/claros/people.html
+++ b/voyager/templates/claros/people.html
@@ -2,7 +2,7 @@
 
 {% block title %}People{% endblock %}
 
-{% block body %}
+{% block content %}
   <h1>People</h1>
   <div class="text-content">
   <p style="text-align:center">
