--- a/voyager/templates/doc/base.html
+++ b/voyager/templates/doc/base.html
@@ -2,7 +2,7 @@
 
 {% block title %}{{ subject.label }}{% endblock %}
 
-{% block body %}
+{% block content %}
   <h1>
     {{ subject.label }}
     <a title="View at partner's website" style="text-decoration: none; position: relative; top: 2px;" href="{{ subject.uri }}">
