--- a/voyager/templates/forbidden.html
+++ b/voyager/templates/forbidden.html
@@ -2,7 +2,7 @@
 
 {% block title %}Forbidden{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Claros Data</h1>
 
     <p>The Claros Data site is not yet live. Please come back on Wednesday the 18th of May!</p>
