--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -2,11 +2,11 @@
 
 {% block title %}Home{% endblock %}
 
-{% block extrahead %}{% if feed %}
+{% block extra_head %}{% if feed %}
 <link rel="alternate" type="application/rss+xml" title="{{ feed.feed.title }}" href="{{ feed.href }}" />
 {% endif %}{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>CLAROS Data</h1>
 
     <div class="text-content">
