--- a/voyager/places/templates/places/index.html
+++ b/voyager/places/templates/places/index.html
@@ -8,14 +8,9 @@
   </script>
 {% endblock %}
 
-{% block body %}
-<article>
+{% block content %}
   <h1>Places</h1>
   
-
   <div id="place-detail" style="display:none; width:400px; height:400px; overflow:auto; float:right;"></div>
   <div id="places-map" style="width:100%; height:400px"></div>
-  
-  
-</article>
 {% endblock %}
